cabal-version:      3.0
name:               sudoku-solver
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Koivuniemi
maintainer:         koivuniemi@posteo.net
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable sudoku-solver
    main-is:          Main.hs
    ghc-options:      -Wall
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      extra ^>=1.7.16,
                      directory ^>=1.3.7.1
    hs-source-dirs:   src
    default-language: Haskell2010
